# rs-benchmark

./: .dockerignore  .env  .gitignore  .gitpod.yml  Cargo.toml  Dockerfile  README.md  Raspberry Pi & Docker Monitoring-1746798488793.json  curl.sh  data.ndjson  docker-compose.yml  elasticsearch.k6.js  k6 Load Testing Results-1746798416754.json  postgres.k6.js  script.sh  test.k6.js
init/postgres/: init.sql
prometheus/: prometheus.yml
src/: generate_data.rs  main.rs
